# backend/models/subject.js
@@ -5,9 +5,8 @@ const Schema = mongoose.Schema;
  * Definition of Subject schema, containing the student id
  */
 const SubjectSchema = new Schema ({
-    _id: mongoose.Schema.Types.ObjectId,
     name: { type: String, required: true, unique: true },
-    student: { type: [mongoose.Schema.Types.ObjectId], ref: 'Student' }
+    students: [{ type: Schema.ObjectId, ref: 'Student', unique: false }]
 });
 
 /**
